# geompy

./: .coveragerc  .gitignore  README.md  dev-requirements.txt  meson.build  meson.options  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: _tests-cpython_cov.yml  badge.yml  tests-mac.yml  tests-os-py.yml  tests-ub-win.yml  tests-ub.yml  tests-win.yml  tests.yaml  tests.yml  tests_imp.yml
example/: 1.py
sh/: pyenv.sh
src/: meson.build
src/_geompy/: .gitignore  Makefile  _geompy.c  _geompy.h  _geompy.sln  _geompy.vcxproj  _geompy.vcxproj.filters  geompy.c
src/_geompy/capi/: rand.c
src/_geompy/clinic/: _geompy.c.h  geompy.c.h
src/_geompy/cpython/: _geompy.h
src/_geompy/include/: Geompy.h  _geompy.h  geompy.h  polygon.h  polygonobject.h
src/_geompy/include/cpython/: _geompy.h  geompy.h  polygon.h  polygonobject.h
src/_geompy/includes/: _math.h  polygon.h  rand.h
src/_geompy/includes/cpython/: polygon.h
src/_geompy/objects/: polygonobject.c
src/_geompy/objects/clinic/: polygonobject.c.h
src/_geompy/resources/: rand.c
src/geompy/: __init__.py  _typing.py  geompy.py  geompy.pyi
tests/: test_geompy.py  test_geompy.pyi
tests/cpython/: provider.py  test__geompy.py
tests/cpython/c/: Makefile  cheak__geompy.c
