[metadata]
name = geompy
version = 0.1.1a
author = Sam Nazarov
author_email = samnnazarov@gmail.com
home_page = https://github.com/sammnnz/GeomPy
description = Python/C API library for geometry calculations
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
platform = any
keywords = geometry
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
include_package_data = true
install_requires=
    matplotlib>=3
    numpy>=1.20.0
python_requires = >= 3.5
package_dir =
    = src
packages = geompy
py_modules = geompy
test_suite = tests
setup_requires =
    setuptools
