[metadata]
name = geompy
version = 0.1.1a
author = Sam Nazarov
author_email = samnnazarov@gmail.com
home_page = https://github.com/sammnnz/GeomPy
description = Python/C API library for geometry calculations
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
platform = any
keywords = geometry
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = false
include_package_data = true
install_requires =
;    pillow
    matplotlib==3.5.3
    numpy>=1.17.0
python_requires = >= 3.5
package_dir =
    = src
packages =
    geompy
test_suite =
    tests
setup_requires =
    setuptools

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
;    tox==3.24
    tox==3.28.0
    tox-envfile>=0.0.5
    coverage>=5.2
    codecov>=2.1.12

[options.package_data]
geompy = py.typed

[flake8]
max-line-length = 160
