[metadata]
name = geompy
version = 0.2.1a
author = Sam Nazarov
author_email = samnnazarov@gmail.com
home_page = https://github.com/sammnnz/GeomPy
description = Python/C API library for geometry calculations
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
platform = any
keywords = geometry
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = false
include_package_data = true
install_requires =
    matplotlib<=3.6.3
    numpy<=1.25.2
python_requires = >= 3.7, < 3.11
package_dir =
    = src
packages =
    geompy
setup_requires =
    setuptools
test_suite =
    tests

[build_ext]
inplace=1

[options.extras_require]
testing =
    pytest==7.4.4
    pytest-cov==4.1.0
    coverage==7.2.7
linting =
    flake8==5.0.4
typechecking =
    mypy==1.4.1
codecov =
    codecov==2.1.13; python_version~="3.7"
    codecov-cli==0.3.0; python_version>="3.8"

[options.package_data]
geompy = py.typed

[flake8]
max-line-length = 120